Bug 612123: Ensure D3D10 layer managers are not used after device changes. r=roc a=blocking-final